get group notes
